--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <section id="cta">
     <div class="action-call">
       <a class="cta-link" href="https://www.linkedin.com/in/ermias-negash-56840145">LinkedIn</a>
-      <a class="cta-link" href="https://www.github.com/">GitHub</a>
+      <a class="cta-link" href="https://eanegash.github.io/cv/">GitHub</a>
     </div>
   </section>
 
