--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
             <img class="testimonial-img" src="images/simon.png" alt="second-profile">
           </a>
         </div>
+        <div class="carousel-item">
+          <a href="https://fast-peak-95793.herokuapp.com/">
+            <img class="testimonial-img" src="images/newsletter.png" alt="third-profile">
+          </a>
+        </div>
       </div>
 
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
