Update to carousel

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://eanegash.github.io/simon-webpage/">
-            <img class="testimonial-img" src="images/simon.png" alt="second-profile">
+          <a href="https://fast-peak-95793.herokuapp.com/">
+            <img class="testimonial-img" src="images/newsletter.png" alt="second-profile">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://fast-peak-95793.herokuapp.com/">
-            <img class="testimonial-img" src="images/newsletter.png" alt="third-profile">
+          <a href="https://eanegash.github.io/simon-webpage/">
+            <img class="testimonial-img" src="images/simon.png" alt="third-profile">
           </a>
         </div>
       </div>
