--- a/index.html
+++ b/index.html
@@ -112,18 +112,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="15000" data-pause="hover">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="https://eanegash.github.io/cv/">
-            <img class="testimonial-img" src="images/my-webpage.png" alt="page-profile">
-          </a>
-        </div>
-        <div class="carousel-item">
           <a href="https://fast-peak-95793.herokuapp.com/">
-            <img class="testimonial-img" src="images/newsletter.png" alt="second-profile">
+            <img class="testimonial-img" src="images/newsletter.png" alt="page-profile">
           </a>
         </div>
         <div class="carousel-item">
           <a href="https://eanegash.github.io/simon-webpage/">
-            <img class="testimonial-img" src="images/simon.png" alt="third-profile">
+            <img class="testimonial-img" src="images/simon.png" alt="second-profile">
           </a>
         </div>
       </div>
