Added carousel item

--- a/index.html
+++ b/index.html
@@ -117,13 +117,18 @@
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://eanegash.github.io/simon-webpage/">
-            <img class="testimonial-img" src="images/simon.png" alt="second-profile">
+          <a href="https://enigmatic-journey-85572.herokuapp.com/">
+            <img class="testimonial-img" src="images/homepage.png" alt="second-profile">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://enigmatic-journey-85572.herokuapp.com/">
-            <img class="testimonial-img" src="images/homepage.png" alt="third-profile">
+          <a href="https://eanegash.github.io/vanilla/">
+            <img class="testimonial-img" src="images/Vanilla-webpage.png" alt="third-profile">
+          </a>
+        </div>
+        <div class="carousel-item">
+          <a href="https://eanegash.github.io/simon-webpage/">
+            <img class="testimonial-img" src="images/simon.png" alt="fourth-profile">
           </a>
         </div>
       </div>
