Minor updates to CSS and HTML of CV.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <section id="cta">
     <div class="action-call">
       <a class="cta-link" href="https://www.linkedin.com/in/ermias-negash-56840145">LinkedIn</a>
-      <a class="cta-link" href="https://eanegash.github.io/cv/">GitHub</a>
+      <a class="cta-link" href="https://github.com/eanegash">GitHub</a>
     </div>
   </section>
 
