--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://eanegash.github.io/simon-webpage/">
-            <img class="testimonial-img" src="images/simon.png" alt="fourth-profile">
+          <a href="http://yhagos.com/">
+            <img class="testimonial-img" src="images/yhagos.png" alt="fourth-profile">
           </a>
         </div>
       </div>
