--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="about-me">
       <img class="self-image" src="images/california.png" alt="vacation-img">
       <h2 class="me">About Me</h2>
-      <p class="intro">I'm a California based developer who for the last 4+ years has been employed as a software engineer - analyst. In my free time I design and create web and iOS applications. I focus on designing & creating a clean & user-friendly
+      <p class="intro">I'm a California based developer who for the last 5+ years has been employed as a Batch Developer, and an Implementation Engineer. In my free time I blog about my financial journey and my interests, Data Science, and build web and iOS applications. Where I focus on designing & creating a clean & user-friendly
         experience.</p>
     </div>
   </section>
