Updated About Bio.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
     <div class="about-me">
       <img class="self-image" src="images/california.png" alt="vacation-img">
       <h2 class="me">About Me</h2>
-      <p class="intro">I'm a California based developer who for the last 5+ years has been employed as a Batch Developer, and an Implementation Engineer. In my free time I blog about my financial journey and my interests, Data Science, and build web and iOS applications. Where I focus on designing & creating a clean & user-friendly
-        experience.</p>
+      <p class="intro">I'm a California based developer who for the last 5+ years has been employed as a Batch Developer, and an Implementation Engineer. In my free time I build websites and iOS applications, and blog about my financial journey and my interest in Data Science. This site will be used as a portfolio of the few things I'm currently building.</p>
     </div>
   </section>
 
