--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
       <!--Title: Header Information -->
       <div class="row">
         <div class="col-md-4">
-          <h2 class="override-bootstrap">iOS/Web Developer</h2>
-          <p>iOS application and front end developer. Focusing on writing clean, simple and efficient code.</p>
+          <h2 class="override-bootstrap">Web Developer</h2>
+          <p>Full Stack Developer. Focusing on writing clean, simple and efficient code.</p>
         </div>
         <div class="col-md-4">
           <h1 class="override-bootstrap">ERMIAS NEGASH</h1>
         </div>
         <div class="col-md-4">
           <h2 class="override-bootstrap">UI/UX Designer</h2>
-          <p>Designer working to create a functional and beautiful user experience.</p>
+          <p>Designer working to create a functional and exciting user experience.</p>
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
     <div class="about-me">
       <img class="self-image" src="images/california.png" alt="vacation-img">
       <h2 class="me">About Me</h2>
-      <p class="intro">I'm a California based developer who for the last 5+ years has been employed as a Batch Developer, and an Implementation Engineer. In my free time I build websites and iOS applications, and blog about my financial journey and my interest in Data Science. This site will be used as a portfolio of the few things I'm currently building.</p>
+      <p class="intro">I'm a Software Engineer who for the last 5+ years has been employed as a Batch Developer, and an Implementation Engineer. In my free time I build websites, and Machine Learning models. This site is a storing place and a portfolio of the few things I'm currently building.</p>
     </div>
   </section>
 
@@ -97,8 +97,8 @@
       </div>
       <div class="skill-row">
         <img class="ios-design" src="images/iOS.png" alt="ios-img">
-        <h3 class="me">iOS Developer</h3>
-        <p class="skill-description">Building applications for iOS powered mobile devices. Utilizing current technologies I strive to design and develop engaging applications.</p>
+        <h3 class="me">Data Science</h3>
+        <p class="skill-description">Building Data Science models to extract insights from structured and unstructured data, with a focus in Machine Learning. I use predictive algoirthms to build computer guided decions processes.</p>
       </div>
     </div>
   </section>
@@ -153,7 +153,7 @@
     <i class="social-icon fab fa-instagram"></i>
     <i class="social-icon fab fa-snapchat-square"></i>
     <i class="social-icon fab fa-facebook-square"></i>
-    <p class="copyright">© 2019 Ermias Negash.</p>
+    <p class="copyright">© 2020 Ermias Negash.</p>
   </footer>
 
 </body>
