--- a/index.html
+++ b/index.html
@@ -57,22 +57,21 @@
           </ul>
         </div>
       </nav>
-
       <!--Title: Header Information -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm">
           <h2 class="override-bootstrap">Web Developer</h2>
           <p>Full Stack Developer. Focusing on writing clean, simple and efficient code.</p>
         </div>
-        <div class="col-md-4">
-          <h1 class="override-bootstrap">ERMIAS NEGASH</h1>
-        </div>
-        <div class="col-md-4">
+        <div class="col-sm">
           <h2 class="override-bootstrap">UI/UX Designer</h2>
           <p>Designer working to create a functional and exciting user experience.</p>
         </div>
+        <div class="col-sm">
+          <h1 class="override-bootstrap">ERMIAS NEGASH</h1>
+        </div>
       </div>
-    </div>
+    </section>
   </section>
 
   <!-- About -->
@@ -97,8 +96,8 @@
       </div>
       <div class="skill-row">
         <img class="ios-design" src="images/iOS.png" alt="ios-img">
-        <h3 class="me">Data Science</h3>
-        <p class="skill-description">Building Data Science models to extract insights from structured and unstructured data, with a focus in Machine Learning. I use predictive algoirthms to build computer guided decions processes.</p>
+        <h3 class="me">Data Scientist</h3>
+        <p class="skill-description">Building Data Science models to extract insights from structured and unstructured data, with a focus in Machine Learning. I use predictive algorithms to build computer guided decions processes.</p>
       </div>
     </div>
   </section>
