--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
   <!--Footer -->
   <footer id="footer">
-    <i class="social-icon fab fa-twitter-square"></i>
-    <i class="social-icon fab fa-instagram"></i>
+    <a class="cta-link" href='https://www.twitter.com/fewinterests'><i class="social-icon fab fa-twitter-square"></i></a>
+    <a class="cta-link" href='https://www.instagram.com/ermssz'><i class="social-icon fab fa-instagram"></i></a>
     <p class="copyright">© 2020 Ermias Negash.</p>
   </footer>
 
